# primes_project

./: CMakeLists.txt  README.md  integer.h  main.cpp  project.cpp  project.h
AKSAlgorithm/: AKSAlg.cpp  AKSAlg.h
Combinations/: combination1.cpp  combination1.h  combination2.cpp  combination2.h
EratosthenesSieve/: sieve.cpp  sieve.h
Exceptions/: except.cpp  except.h
FermatsAlgorithm/: fermatsFact.cpp  fermatsFact.h
MillerRabin/: MillerRabin.cpp  MillerRabin.h
PollardsAlgorithm/: pollardAlg.cpp  pollardAlg.h
Pseudoprimes/: pseudoprimes.cpp  pseudoprimes.h
Tests/: gtestss.h  testAKS.cpp  testAKS.h  testAlgorithms.cpp  testAlgorithms.h  testFermatsAlgorithm.cpp  testFermatsAlgorithm.h  testMillerRabin.cpp  testMillerRabin.h  testPollard.cpp  testPollard.h  testSieve.cpp  testSieve.h  testTrialDivision.cpp  testTrialDivision.h  test_MillerRabin.cpp  test_combination1.cpp  test_combination2.cpp  test_fermatsFact.cpp  test_pollardAlg.cpp  test_sieve.cpp  test_trialDiv.cpp  tests.cpp  tests.h  write_test_results.cpp  write_test_results.h
Tests/Data/: comb1_test_results.csv  comb2_test_results.csv  fermat_test_results.csv  mr_test_results.csv  pollard_test_results.csv  primes_1000000.txt  primes_79.txt  sieve_test_results.csv  test_results.csv  trialdiv_test_results.csv
TrialDivision/: trialDiv.cpp  trialDiv.h
UseCases/: testAKS.h  usages.cpp  usages.h  useAlgorithms.cpp  useAlgorithms.h  useCombinations.cpp  useCombinations.h  useFermat.cpp  useFermat.h  useMillerRabin.cpp  useMillerRabin.h  usePollard.cpp  usePollard.h  useSieve.cpp  useSieve.h  useTrialDivision.cpp  useTrialDivision.h
Useful/: algorithms.cpp  algorithms.h  profiler.cpp  profiler.h
Utils/: algorithms.cpp  algorithms.h  profiler.cpp  profiler.h
